⚡Mudança do redirecionamento contato.

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <h2 class="titulo">FALE<span> COMIGO.</span></h2>
             <form action="https://api.staticforms.xyz/submit" method="post" class="contact-form"> 
                 <input type="hidden" name="accessKey" value="aaf7ac49-50af-4f0e-9fb1-8f3ff07f6b92">
-                <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/index.html"> <!-- Required -->
+                <input type="hidden" name="redirectTo" value="https://guilhermouu.github.io/Portifolio-Guilhermo/#texto-topo-site"> <!-- Required -->
                 <input type="text" id="name" name="name" placeholder="Seu nome completo:" required>
                 <input type="email" id="email" name="email" placeholder="Seu e-mail:" required>
                 <input type="tel" id="phone" name="phone" placeholder="Seu celular:" required>
